SERVER-36531 Lock acquisition may throw despite use of UninterruptibleLockGuard when WiredTiger tickets are exhausted